--- a/index.html
+++ b/index.html
@@ -17958,6 +17958,13 @@
                 margin-top: 0%;
             }
 
+            #gallery{
+                background-image: url(./images/87ae5776332de7638debd33836dd1fdf.jpg);
+            }
+            #gallery img{
+                width: 100%;
+            }
+
             #JN0cBIdBsqxCvB6f {
                 grid-template-columns: 0 0 99.48255814rem 0;
                 grid-template-rows: 0 0 minmax(13.44557833rem, max-content) 0;
@@ -20605,7 +20612,20 @@
             </div>
         </section>
        
-   
+   <section id="gallery" style="display: grid; grid-template-columns: repeat(3,1fr);">
+    <img src="./images/elon2.jpg" alt="">
+    <img src="./images/elon3.jpg" alt="">
+    <img src="./images/elon4.jpg" alt="">
+    <img src="./images/elon5.jpg" alt="">
+    <img src="./images/elon6.jpg" alt="">
+    <img src="./images/elon7.jpg" alt="">
+    <img src="./images/elon8.jpg" alt="">
+    <img src="./images/elon9.jpg" alt="">
+    <img src="./images/elon10.jpg" alt="">
+    <img src="./images/elon11.jpg" alt="">
+    <img src="./images/elon12.jpg" alt="">
+    <img src="./images/elon13.jpg" alt="">
+    </section>
         <section id="page-4"
             style="position:relative;overflow:hidden;display:grid;align-items:center;grid-template-columns:auto 100rem auto;z-index:0;margin-top:-1px;">
             <div id="E4s8was0rRTrWuNU"
@@ -22699,7 +22719,7 @@
                     <div id="ILwuQLdJNjNr1PJh" style="padding-top:108.84353741%;transform:rotate(0deg);">
                         <div id="PLsUcIlNHObFvCXp" style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                 id="FUnzAQjAUCWF1qR3" target="_blank" rel="noopener"
-                                href="twitterlink"
+                                href="https://twitter.com/Elon6900_"
                                 style="pointer-events:all;">
                                 <div id="I8D3AuAYW9usxgMn" style="width:100%;height:100%;opacity:1.0;">
                                     <div id="WyoN9jgqKXK2AdF6"
@@ -22801,7 +22821,7 @@
                     <div id="Go422NJEmnurAnJ3" style="padding-top:114.83443709%;transform:rotate(0deg);">
                         <div id="C1G9eaZcw6lS94xh" style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                 id="pld5wUB415wkJM54" target="_blank" rel="noopener"
-                                href="chartlink"
+                                href="https://www.dextools.io/app/en/ether/pair-explorer/0xa9661decc57c422e9f534bded8adf95ef248a10b"
                                 style="pointer-events:all;">
                                 <div id="chKIObr7PbQsktO3" style="width:100%;height:100%;opacity:1.0;">
                                     <div id="ZMAFOU4dRwl8lyyA"
@@ -22836,7 +22856,7 @@
                     <div id="jEHU0U4jy2f9csi8" style="padding-top:100%;transform:rotate(0deg);">
                         <div id="Pc84QJbnFTSNqVOE" style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                 id="n6ESfKJDH0vkVGPJ" target="_blank" rel="noopener"
-                                href="buylink"
+                                href="https://app.uniswap.org/tokens/ethereum/0xe79a9fec492f6aa500ad76905e40443abd2becf9"
                                 style="pointer-events:all;">
                                 <div id="sEoVQqcQ7HcsvRgU" style="width:100%;height:100%;opacity:1.0;">
                                     <div id="woiWoxq20Z5NeRvo"
@@ -22860,7 +22880,7 @@
                                 <div id="PSZiArWJPgn74A3O"
                                     style="position:absolute;top:0px;left:0px;width:100%;height:100%;"><a
                                         id="zjHrGubvRxwQaWeC" target="_blank" rel="noopener"
-                                        href="tglink"
+                                        href="https://t.me/elon6900erc"
                                         style="pointer-events:all;">
                                         <div id="AwkmHQHkHuZJ5KLw" style="width:100%;height:100%;opacity:1.0;">
                                             <div id="cFjWrAZJDgiagETH"
@@ -23315,8 +23335,8 @@
                                             style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                             <p id="SJvyC948txqpWr0S"
                                                 style="color:#ffffff;font-family:YACgEcYqQ-A-0;line-height:1.38381599em;text-align:center;text-transform:none;letter-spacing:0em;-webkit-text-stroke:0.16625em rgb(0, 0, 0);-webkit-text-fill-color:transparent;">
-                                                <span id="JQQYHKorFfdLMl0R" style="color:#ffffff;">SUPPORT@ELON6900.VIP
-                                                    © SHILLOR, ALL RIGHTS RESERVED </span><br></p>
+                                                <span id="JQQYHKorFfdLMl0R" style="color:#ffffff;">SUPPORT@ELON6900.WTF
+                                                    , ALL RIGHTS RESERVED </span><br></p>
                                         </div>
                                     </div>
                                 </div>
@@ -23327,8 +23347,8 @@
                                             style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                             <p id="WnzvAg0fS1xYT6Uy"
                                                 style="color:#ffffff;font-family:YACgEcYqQ-A-0;line-height:1.38381599em;text-align:center;text-transform:none;letter-spacing:0em;">
-                                                <span id="TdDcLhX1KSFMGzrZ" style="color:#ffffff;">SUPPORT@ELON6900.VIP
-                                                    © SHILLOR, ALL RIGHTS RESERVED </span><br></p>
+                                                <span id="TdDcLhX1KSFMGzrZ" style="color:#ffffff;">SUPPORT@ELON6900.WTF
+                                                    , ALL RIGHTS RESERVED </span><br></p>
                                         </div>
                                     </div>
                                 </div>
