--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             --1vh: var(--inner1Vh, 1vh);
         }
 
+        #gallery{
+                background-image: url(./images/87ae5776332de7638debd33836dd1fdf.jpg);
+            }
+            #gallery img{
+                width: 100%;
+            }
+
         @media (prefers-reduced-motion: reduce) {
             .animated {
                 animation: none !important;
@@ -453,6 +460,10 @@
             #lbEPm6JPnBanFpU3 {
                 grid-area: 2 / 2 / 3 / 3;
                 position: relative;
+            }
+
+            #gallery{
+                grid-template-columns: repeat(1,1fr);
             }
 
             #YSLpuB1G31Zye3jt {
@@ -4241,6 +4252,7 @@
                 position: relative;
             }
 
+            
             #YSLpuB1G31Zye3jt {
                 grid-template-columns: 0 100%;
                 grid-template-rows: 0 100%;
@@ -17958,12 +17970,7 @@
                 margin-top: 0%;
             }
 
-            #gallery{
-                background-image: url(./images/87ae5776332de7638debd33836dd1fdf.jpg);
-            }
-            #gallery img{
-                width: 100%;
-            }
+            
 
             #JN0cBIdBsqxCvB6f {
                 grid-template-columns: 0 0 99.48255814rem 0;
