--- a/index.html
+++ b/index.html
@@ -19472,7 +19472,7 @@
                         style="box-sizing:border-box;width:100%;height:100%;transform:rotate(0deg);">
                         <div id="IfT7SHdWruu8BuAU" style="width:100%;height:100%;opacity:1.0;">
                             <div id="zSdL9N3vnCro8nVb"
-                                style="background-color:violet;opacity:1.0;transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
+                                style="background-color:green;opacity:1.0;transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                             </div>
                         </div>
                     </div>
@@ -19762,9 +19762,9 @@
                                     <div id="Aaqg0X1juNuJRgmK"
                                         style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                         <p id="DNxLupEj2rGWUxnb"
-                                            style="color:violet;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;-webkit-text-stroke:0.2625em rgb(0, 0, 0);-webkit-text-fill-color:transparent;">
+                                            style="color:green;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;-webkit-text-stroke:0.2625em rgb(0, 0, 0);-webkit-text-fill-color:transparent;">
                                             <span id="z0QQuVJoBlFx8bHG"
-                                                style="color:violet;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
+                                                style="color:green;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
                                         </p>
                                     </div>
                                 </div>
@@ -19775,9 +19775,9 @@
                                     <div id="FMbCNRC3XUZN3X1g"
                                         style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                         <p id="uZZgDq18PNuxNwxI"
-                                            style="color:violet;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;">
+                                            style="color:green;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;">
                                             <span id="IGh8RwyrbH2wJz6X"
-                                                style="color:violet;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
+                                                style="color:green;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
                                         </p>
                                     </div>
                                 </div>
@@ -20781,8 +20781,8 @@
                                 <div id="lTr9CutgO7IclaTT"
                                     style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                     <p id="jeN5yDF7nxC3iOnt"
-                                        style="color:violet;font-family:YAFcfl33Kjk-0;line-height:0.99996552em;text-align:center;text-transform:none;letter-spacing:0em;-webkit-text-stroke:0.18em rgb(35, 31, 32);-webkit-text-fill-color:transparent;">
-                                        <span id="taYm9VQVQA3yQcek" style="color:violet;">ZERO TAX</span><br></p>
+                                        style="color:green;font-family:YAFcfl33Kjk-0;line-height:0.99996552em;text-align:center;text-transform:none;letter-spacing:0em;-webkit-text-stroke:0.18em rgb(35, 31, 32);-webkit-text-fill-color:transparent;">
+                                        <span id="taYm9VQVQA3yQcek" style="color:green;">ZERO TAX</span><br></p>
                                 </div>
                             </div>
                         </div>
@@ -20793,8 +20793,8 @@
                                     <div id="xyxCisizvtlwW8vz"
                                         style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                         <p id="sL66rOBJLA9qRBD0"
-                                            style="color:violet;font-family:YAFcfl33Kjk-0;line-height:0.99996552em;text-align:center;text-transform:none;letter-spacing:0em;">
-                                            <span id="AmNf8BYlJGhVt4jf" style="color:violet;">ZERO TAX</span><br></p>
+                                            style="color:green;font-family:YAFcfl33Kjk-0;line-height:0.99996552em;text-align:center;text-transform:none;letter-spacing:0em;">
+                                            <span id="AmNf8BYlJGhVt4jf" style="color:green;">ZERO TAX</span><br></p>
                                     </div>
                                 </div>
                             </div>
@@ -22835,7 +22835,7 @@
                                         style="transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                                         <div id="irDfu8nvbTAPPB9C"
                                             style="width:calc(100% * max(1, var(--scale-fill, 1)));height:calc(100% / min(1, var(--scale-fill, 1)));position:absolute;top:50%;left:50%;opacity:1.0;animation:pulse 1.5s ease-in-out infinite;">
-                                            <img src="violet" loading="lazy"
+                                            <img src="green" loading="lazy"
                                                 style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);">
                                         </div>
                                     </div>
@@ -22894,7 +22894,7 @@
                                                 style="transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
                                                 <div id="lHyChbqK3BIMY5pq"
                                                     style="width:calc(100% * max(1, var(--scale-fill, 1)));height:calc(100% / min(1, var(--scale-fill, 1)));position:absolute;top:50%;left:50%;opacity:1.0;animation:pulse 1.5s ease-in-out infinite;">
-                                                    <img src="violet"
+                                                    <img src="green"
                                                         alt="Telegram App" loading="lazy"
                                                         style="width:100%;height:100%;display:block;object-fit:cover;object-position:50% 50%;transform:translate(-50%, -50%) rotate(0deg);">
                                                 </div>
@@ -23294,9 +23294,9 @@
                                     <div id="hZrUn5urw16Ob4Cr"
                                         style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                         <p id="nKkhv7S7CddNVzCT"
-                                            style="color:violet;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;-webkit-text-stroke:0.2625em rgb(0, 0, 0);-webkit-text-fill-color:transparent;">
+                                            style="color:green;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;-webkit-text-stroke:0.2625em rgb(0, 0, 0);-webkit-text-fill-color:transparent;">
                                             <span id="iIALzPK2suTt7s4G"
-                                                style="color:violet;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
+                                                style="color:green;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
                                         </p>
                                     </div>
                                 </div>
@@ -23307,9 +23307,9 @@
                                     <div id="EyQaq9cHXVoeKvxM"
                                         style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
                                         <p id="k6VM2ay582E0bNam"
-                                            style="color:violet;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;">
+                                            style="color:green;font-family:YAFcfl33Kjk-0;line-height:0.9893596em;text-align:center;text-transform:none;letter-spacing:0em;">
                                             <span id="lcNJPsGZwKKKCnJP"
-                                                style="color:violet;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
+                                                style="color:green;">0xe79a9fec492f6aa500ad76905e40443abd2becf9</span><br>
                                         </p>
                                     </div>
                                 </div>
